<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name" translatable="false">CinemaLog</string>
    <string name="watchlist">WATCHLIST</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_movie">MOVIES</string>
    <string name="tab_tv_show">TV SHOWS</string>
    <string name="title">Title</string>
    <string name="year">Release</string>
    <string name="description">Description</string>
    <string name="overview">Overview</string>
    <string name="english">English</string>
    <string name="indonesian">Indonesian</string>
    <string name="choose_language">Choose language</string>
    <string name="poster" translatable="false">Poster</string>
    <string name="title_movie" translatable="false">Movies</string>
    <string name="year_release" translatable="false">Year Release</string>
    <string name="ratting">Ratting</string>
    <string name="app_logo" translatable="false">App Logo</string>
    <string name="title_tv_shows" translatable="false">Tv Shows</string>
    <string name="title_favorites" translatable="false">Favorites</string>
    <string name="translate">Translate</string>

</resources>
