<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_movie">
    <fragment
        android:id="@+id/navigation_movie"
        android:name="com.dicoding.cinemalog.view.MovieFragment"
        android:label="@string/title_movie"
        tools:layout="@layout/fragment_movie" />

    <fragment
        android:id="@+id/navigation_tvshow"
        android:name="com.dicoding.cinemalog.view.TvShowFragment"
        android:label="@string/title_tv_shows"
        tools:layout="@layout/fragment_tv_show" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.dicoding.cinemalog.view.FavoriteFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorite" />
</navigation>