<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="18dp">

    <TextView
        android:id="@+id/txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/choose_language"
        android:textSize="24sp" />

    <RadioGroup
        android:id="@+id/rg_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <RadioButton
            android:id="@+id/rb_english"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/english"
            android:textSize="18sp"
            android:checked="false"/>

        <RadioButton
            android:id="@+id/rb_indonesian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/indonesian"
            android:textSize="18sp"
            android:checked="false" />

    </RadioGroup>

</LinearLayout>