<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_rectangle_white"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/iv_poster"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:background="@color/colorGrey"
        android:contentDescription="@string/poster" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="14dp"
        android:paddingTop="8dp"
        android:paddingRight="14dp"
        android:paddingBottom="8dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mmedium"
            android:maxLines="1"
            android:text="@string/title"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/mlight"
            android:text="@string/year"
            android:textColor="@color/colorDarkGrey"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <RatingBar
                android:id="@+id/rattingBar"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isIndicator="true"
                android:numStars="5" />

            <TextView
                android:id="@+id/tv_ratting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/mmedium"
                android:text="@string/ratting" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:ellipsize="end"
            android:fontFamily="@font/mlight"
            android:maxLines="3"
            android:text="@string/description"
            android:textColor="@color/colorDarkGrey"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>